# norlab_audio_py

./: .gitignore  README.md  package.xml  requirements.txt  setup.cfg  setup.py
config/: _audio_to_file.yaml  _microphone.yaml
launch/: audio_to_file.launch.py  microphone.launch.py
norlab_audio_py/: audio_driver.py  audio_recorder.py  record_audio.py
