<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>norlab_audio_py</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="matej.boxan@norlab.ulaval.ca">Matej Boxan</maintainer>
  <license>BSD-3-Clause</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>python3-numpy</exec_depend>

  <exec_depend>std_msgs</exec_depend>

  <exec_depend>libportaudio2</exec_depend>
  <exec_depend>audio_common_msgs</exec_depend>

  <!-- <exec_depend>sounddevice</exec_depend> -->
  <!-- <exec_depend>pywave</exec_depend> -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
